--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,5 +10,7 @@ tokio = {version = "1", features = ["full"]}
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
-sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
 dotenv = "0.15.0"
+serde = "1.0.219"
+chrono = {version = "0.4.41", features = ["serde"]}
