add home page to return html, and add static service directory

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,4 @@ sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postg
 dotenv = "0.15.0"
 serde = "1.0.219"
 chrono = {version = "0.4.41", features = ["serde"]}
+tower-http = { version = "0.6.2", features = ["fs", "trace"] }
